# server/dependencies.go
@@ -3,15 +3,17 @@ package server
 import (
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/activity"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/calculator"
+	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/measurement"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/user"
 	"github.com/jmoiron/sqlx"
 	"github.com/redis/go-redis/v9"
 )
 
 type AppDependencies struct {
-	ActivityService   *activity.ServiceActivity
-	UserService       *user.ServiceUser
-	CalculatorService *calculator.ServiceCalculator
+	ActivityService    *activity.ServiceActivity
+	UserService        *user.ServiceUser
+	CalculatorService  *calculator.ServiceCalculator
+	MeasurementService *measurement.ServiceMeasurements
 	// You may add other dependencies here if needed
 }
 
@@ -25,6 +27,10 @@ func (ad *AppDependencies) GetUserService() *user.ServiceUser {
 
 func (ad *AppDependencies) GetCalculatorService() *calculator.ServiceCalculator {
 	return ad.CalculatorService
+}
+
+func (ad *AppDependencies) GetMeasurementService() *measurement.ServiceMeasurements {
+	return ad.MeasurementService
 }
 
 type SessionDependencies struct {
