# server/internals/server.go
@@ -6,6 +6,7 @@ import (
 	"fmt"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/activity"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/calculator"
+	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/measurement"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/api/internal_api/user"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/helpers/db"
 	"github.com/FACorreiaa/Stay-Healthy-Backend/server"
@@ -131,10 +132,16 @@ func NewServer() (*Server, error) {
 		_ = errors.New("error injecting calculator service")
 	}
 
+	measurementRepo, err := measurement.NewMeasurementRepository(s.db)
+	if err != nil {
+		_ = errors.New("error injecting calculator service")
+	}
+
 	deps := &server.AppDependencies{
-		ActivityService:   activity.NewActivityService(activityRepo),
-		UserService:       user.NewUserService(userRepo),
-		CalculatorService: calculator.NewCalculatorService(calculatorRepo),
+		ActivityService:    activity.NewActivityService(activityRepo),
+		UserService:        user.NewUserService(userRepo),
+		CalculatorService:  calculator.NewCalculatorService(calculatorRepo),
+		MeasurementService: measurement.NewMeasurementService(measurementRepo),
 	}
 
 	sessionDeps := &server.SessionDependencies{
